Fixed some inconsistencies with new Entry model.

--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -67,7 +67,7 @@
             .panel.panel-default
               .panel-heading Parents
               ul.list-group
-                li.list-group-item {{entry.parents}}
+                li.list-group-item {{entry.parents.parents}}
           
           
           .col-lg-12.col-md-4.col-sm-6(ng-show="entry.marriages.length")
