Fixed some more incompatibilities between new and old code.

--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -223,11 +223,8 @@
         
       div.col-lg-6
         p.text-serif.check-html(ng-bind-html="highlighted('entry_biography', superscript(entry.biography, entry.notes))")
-        p.text-serif.check-html(ng-repeat="tour in entry.tours")
-          span.check-html(ng-bind-html="highlighted('entry_tours', superscript(tour.text, tour.notes))")
-          span.small
-            br
-            | {{tour.notes}}
+        p.text-serif.check-html(ng-repeat="tour in splitTours(entry.tours)")
+          span.check-html(ng-bind-html="highlighted('entry_tours', tour)")
         p.text-serif.check-html(ng-bind-html="highlighted('entry_narrative', superscript(entry.narrative, entry.notes))")
         p.text-serif.small(ng-bind-html="highlighted('entry_notes', entry.notes)")
         
