Added banner for administrators and editors to update active revision from search, explore, lists and entry.

--- a/public/app.css
+++ b/public/app.css
@@ -737,3 +737,9 @@ table.table {
   transform: translateY(-50%);
   font-size: 1.25em;
 }
+
+.revision-status {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
