--- a/public/entry/entry.pug
+++ b/public/entry/entry.pug
@@ -1,5 +1,10 @@
 .container.main-view
 
+  .row
+    .col-lg-12
+      revision-status
+  br
+
   .div(ng-show="noEntry")
     p No entry with that index found!
 
