--- a/public/lists/lists.pug
+++ b/public/lists/lists.pug
@@ -1,8 +1,15 @@
 .container.main-view
 
     .row
-        h3 Your lists
-        hr
+      .col-lg-12
+        revision-status
+    br
+
+    .row
+        .col-lg-12
+            h3 Your lists
+            hr
+    
     .row
         .col-lg-3.border-right
             .list-group
