--- a/public/index.pug
+++ b/public/index.pug
@@ -81,3 +81,4 @@ html(lang="en", ng-app="app")
 
     script(type='text/javascript', src='/components/facet/facet.js')
     script(type='text/javascript', src='/components/entry-list/entry-list.js')
+    script(type='text/javascript', src='/components/revision-status/revision-status.js')
