--- a/public/index.pug
+++ b/public/index.pug
@@ -4,6 +4,7 @@ html(lang="en", ng-app="app")
     meta(charset="utf-8")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     base(href="/")
+    link(rel="shortcut icon", href="/favicon.png")
     title Grand Tour Explorer
       
     link(rel="stylesheet", href="https://fonts.googleapis.com/css?family=Cousine:400,700")  
