Wrote working (but unstyled) modal-based array-of-objects editor.

--- a/public/components/entry-field/full-name.pug
+++ b/public/components/entry-field/full-name.pug
@@ -1,11 +1,11 @@
 span(
-    ng-show="!currentlyEditing",
-    ng-click="handleClick()",
-) {{ value }}
+    ng-show="!isEditing()",
+    ng-click="startEditing()",
+) {{ entry[fieldKey] }}
 
 input.focus(
-    ng-show="currentlyEditing",
+    ng-show="isEditing()",
     type="text",
-    ng-model="value",
-    ng-change="edited({ value: value })"
+    ng-model="entry[fieldKey]",
+    ng-change="edited(fieldKey)",
 )
