--- a/public/app.css
+++ b/public/app.css
@@ -790,3 +790,26 @@ li:hover > .mentioned-names-popup {
   display: block;
   background-color: white;
 }
+
+.italic {
+  font-style: italic;
+}
+
+.custom-modal {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, .5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-inner {
+  background-color: white;
+  padding: 2em;
+  border-radius: 5px;
+  box-shadow: 0px 1px 5px #444;
+}
