--- a/public/app.css
+++ b/public/app.css
@@ -297,13 +297,13 @@ sup {
   border: 1px solid #eee;
 }
 
-.entry-info .panel>.list-group .list-group-item, .panel>.panel-collapse>.list-group .list-group-item {
+.entry-info .panel .list-group .list-group-item, .panel .panel-collapse>.list-group .list-group-item {
   border-radius: 0;
   padding: 3px 0px;
   font-size: 15px;
 }
 
-.entry-info .panel>.list-group:last-child .list-group-item:last-child, .panel>.panel-collapse>.list-group:last-child .list-group-item:last-child {
+.entry-info .panel .list-group:last-child .list-group-item:last-child, .panel .panel-collapse>.list-group:last-child .list-group-item:last-child {
   border-bottom: 1px solid #eee;
   border-bottom-right-radius: 0px;
   border-bottom-left-radius: 0px;
@@ -794,6 +794,7 @@ li:hover > .mentioned-names-popup {
 ul.list-group.entry-facet > li {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 }
 
 ul.list-group.entry-facet > li .controls {
