--- a/public/index.pug
+++ b/public/index.pug
@@ -65,6 +65,8 @@ html(lang="en", ng-app="app")
     script(src="bower_components/angular-sanitize/angular-sanitize.min.js")
     script(src="bower_components/angular-animate/angular-animate.min.js")
     script(src="bower_components/angular-ui-router/release/angular-ui-router.min.js")
+    script(src="bower_components/Sortable/Sortable.js")
+    script(src="bower_components/angular-legacy-sortablejs/angular-legacy-sortable.js")
 
     script(src="bower_components/angular-bootstrap/ui-bootstrap.min.js")
     script(src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js")
