--- a/public/components/entry-field/facet-wrapper.pug
+++ b/public/components/entry-field/facet-wrapper.pug
@@ -13,17 +13,17 @@
     .panel-heading {{ entryFields[fieldKey].label }}
     ul.list-group.entry-facet
         li.list-group-item
-            ng-include.data(src="'components/entry-field/facet-template' + (facetTemplate ? ('-' + facetTemplate) : '')", ng-init="fieldValue = entry[fieldKey]")
+            ng-include.data(src="'components/entry-field/facet-template' + (facetTemplate ? ('-' + facetTemplate) : '')")
             a.controls.small.pull-right.margin-right(ng-click="editObject(fieldValue)") edit 
 
 .custom-modal(ng-show="modalModel")
     .modal-inner
         h4 Edit Item
-        form
+        form(onsubmit="return false")
             .input-group.input-group-sm(ng-repeat="field in modalModel")
                 span.input-group-addon {{ field.name }}
                 input.form-control(type="text", ng-model="field.value")
 
             .btn-group.btn-group-sm
-                button.btn.btn-sm.btn-warning(type="submit", ng-click="modalCancel()") Cancel
-                button.btn.btn-sm.btn-info(type="submit", ng-click="modalSave()") Apply
+                button.btn.btn-sm.btn-warning(type="button", ng-click="modalCancel()") Cancel
+                button.btn.btn-sm.btn-info(type="button", ng-click="modalSave()") Apply
