--- a/public/components/entry-field/facet-wrapper.pug
+++ b/public/components/entry-field/facet-wrapper.pug
@@ -1,20 +1,20 @@
-.panel.panel-default(ng-if="entryFields[fieldKey].typeInfo.isArrayOfValues")
+.panel.panel-default(ng-if="fieldValueArray")
     .panel-heading {{ entryFields[fieldKey].label }}
     ul.list-group.entry-facet(ng-sortable="{ onUpdate: arraySorted }")
-        li.list-group-item(ng-repeat="fieldValue in fieldValue")
+        li.list-group-item(ng-repeat="fieldValue in fieldValueArray")
             ng-include.data(src="'components/entry-field/facet-template' + (facetTemplate ? ('-' + facetTemplate) : '')")
             .controls
                 a.small.pull-right(ng-click="deleteFromArray(fieldValue)") delete 
-                a.small.pull-right.margin-right(ng-click="editObject(fieldValue)") edit 
+                a.small.pull-right.margin-right(ng-click="editInModal(fieldValue, $index)") edit
     
     a.small.italic(ng-click="addToArray()") Add New
     
-.panel.panel-default(ng-if="!entryFields[fieldKey].typeInfo.isArrayOfValues")
+.panel.panel-default(ng-if="!fieldValueArray")
     .panel-heading {{ entryFields[fieldKey].label }}
     ul.list-group.entry-facet
         li.list-group-item
             ng-include.data(src="'components/entry-field/facet-template' + (facetTemplate ? ('-' + facetTemplate) : '')")
-            a.controls.small.pull-right.margin-right(ng-click="editObject(fieldValue)") edit 
+            a.controls.small.pull-right.margin-right(ng-click="editInModal(fieldValue)") edit 
 
 .custom-modal(ng-show="modalModel")
     .modal-inner
@@ -22,7 +22,9 @@
         form(onsubmit="return false")
             .input-group.input-group-sm(ng-repeat="field in modalModel")
                 span.input-group-addon {{ field.name }}
-                input.form-control(type="text", ng-model="field.value")
+                input.form-control(ng-if="field.type === 'string'", type="text", ng-model="field.value")
+                input.form-control(ng-if="field.type === 'number'", type="number", ng-model="field.value")
+                input.form-control(ng-if="field.type === 'boolean'", type="checkbox", ng-model="field.value")
 
             .btn-group.btn-group-sm
                 button.btn.btn-sm.btn-warning(type="button", ng-click="modalCancel()") Cancel
