--- a/public/components/entry-field/full-name.pug
+++ b/public/components/entry-field/full-name.pug
@@ -7,5 +7,5 @@ input.focus(
     ng-show="isEditing()",
     type="text",
     ng-model="entry[fieldKey]",
-    ng-change="edited(fieldKey)",
+    ng-change="edited(fieldKey, fieldValue)",
 )
