--- a/public/edit-entry/edit-entry.pug
+++ b/public/edit-entry/edit-entry.pug
@@ -61,7 +61,7 @@
 
         div.col-lg-6
             entry-field(
-                ng-repeat="fieldKey in [ 'biography', 'tour', 'narrative', 'notes' ]",
+                ng-repeat="fieldKey in [ 'biography', 'tours', 'narrative', 'notes' ]",
                 field-key="{{ fieldKey }}",
                 template="entry-text",
             )
